Bug 401700 - Cache images of apps/Plasma addons so that their previews didn't load on every scroll
Summary: Cache images of apps/Plasma addons so that their previews didn't load on ever...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: KNewStuff Backend (other bugs)
Version First Reported In: 5.14.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-03 16:18 UTC by Alexander Mentyu
Modified: 2018-12-03 17:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2018-12-03 16:18:05 UTC
STEPS TO REPRODUCE
1. Open Discover.
2. Open any top left page - Applications or Plasma Addons.
3. Scroll lower a couple of times.
4. Scroll upper a couple of times.
5. Watch on applications/Plasma addons previews.

OBSERVED RESULT
Previews are always loading from default icon to specifilc app/Plasma addon upon scrolling.

EXPECTED RESULT
Previews are cached and not loading on every scroll lower/upper page scroll.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
KDE Frameworks Version: 5.53.0
Qt Version: 5.11.2
Kernel Version: 4.15.0-39-generic
Comment 1 Aleix Pol 2018-12-03 17:08:35 UTC
Git commit 63d8dc77118557f81f79c94fdbe21c4cc6e4a368 by Aleix Pol.
Committed on 03/12/2018 at 17:05.
Pushed by apol into branch 'master'.

Fix qml image caching

Don't provide two disjoint qnam factories that fight each other.

M  +1    -0    discover/CMakeLists.txt
R  +2    -1    discover/CachedNetworkAccessManager.cpp [from: libdiscover/CachedNetworkAccessManager.cpp - 097% similarity]
R  +4    -4    discover/CachedNetworkAccessManager.h [from: libdiscover/CachedNetworkAccessManager.h - 090% similarity]
M  +1    -16   discover/DiscoverObject.cpp
M  +0    -1    libdiscover/CMakeLists.txt

https://commits.kde.org/discover/63d8dc77118557f81f79c94fdbe21c4cc6e4a368