Fix qml image caching

Don't provide two disjoint qnam factories that fight each other.

BUG: 401700